<resources>
    <string name="app_name">mPOS SDK Sample App </string>
    <string name="versionName">V %s</string>
    <string name="USB_not_supported">USB is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported.</string>
    <string name="init">Init</string>
    <string name="bank_param_download">Bank Parameters Downloads</string>
    <string name="pay">Pay</string>
    <string name="mdm_checkUpdate">MDM check update</string>
    <string name="update">update</string>
    <string name="mdm_send_log">MDM Send Log</string>
    <string name="close">close</string>
    <string name="ucube_touch">uCube Touch</string>
    <string name="ucube">uCube</string>
    <string name="settings">Settings</string>
    <string name="reset">reset</string>
    <string name="progress">%s progress…</string>
    <string name="scan">Scan</string>
    <string name="setup">Setup</string>
    <string name="Test">Test</string>
    <string name="auto_cancel">Auto cancel at</string>
    <string name="auto_disconnect">Auto disconnect at</string>
    <string name="delete_selected_ucube">Delete selected uCube</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="ok">OK</string>
    <string name="mandatory">(Mandatory)</string>
    <string name="cancel">Cancel</string>
    <string name="logo_YT_description">Logo YT</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_scan_devices">uCube Touch Devices Discovery</string>
    <string name="title_list_devices">Paired Devices</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="error_setup">Error setup!</string>
    <string name="error_set_mandatory_field">Mandatory field</string>
    <string name="error_wrong_value">Wrong value</string>
    <string name="enable_bt_msg">This app needs Bluetooth to work without any problems.</string>
    <string name="enable_bt_yes_label">Yes, Enable Bluetooth</string>
    <string name="enable_bt_no_label">No, Close</string>
    <string name="setup_progress">Setup progress…</string>
    <string name="send_log_progress">Send Log progress…</string>
    <string name="send_log_failed">Send Logs failed</string>
    <string name="send_log_success">Send Logs success</string>
    <string name="connecting">Connecting …</string>
    <string name="connect_failed">Connect failed Msg : %1$s Code : %2$d</string>
    <string name="connect_success">Connect success</string>
    <string name="connection_cancelled">Connection cancelled</string>
    <string name="disconnecting">Disconnecting …</string>
    <string name="disconnect_failed">Disconnect failed</string>
    <string name="disconnect_success">Disconnect success</string>
    <string name="delete_ucube_progress">Delete ucube progress…</string>
    <string name="delete_ucube_failed">Delete ucube failed</string>
    <string name="delete_ucube_success">Delete ucube success</string>
    <string name="register_progress">Register progress</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register Failed</string>
    <string name="get_config_progress">Get config progress</string>
    <string name="get_config_success">Get config success</string>
    <string name="get_config_failed">Get config Failed</string>
    <string name="check_update_progress">Check update progress…</string>
    <string name="check_update_failed">Check update failed</string>
    <string name="check_update_success">Check update success</string>
    <string name="ucube_up_to_date">"uCube is up to date"</string>
    <string name="list_update_dialog_title">Binaries to update</string>
    <string name="update_progress">Update progress…</string>
    <string name="update_failed">Update failed</string>
    <string name="update_success">Update success</string>
    <string name="ucube_model">Model: %s</string>
    <string name="ucube_name">Name: %s</string>
    <string name="ucube_address">MAC: %s</string>
    <string name="ucube_serial_num">Serial Number: %s</string>
    <string name="ucube_part_number">Part Number: %s</string>
    <string name="ucube_firmware_version">SVPP version: %s</string>
    <string name="ucube_firmware_st_version">Firmware ST version: %s</string>
    <string name="ucube_icc_config">ICC config: %s</string>
    <string name="ucube_nfc_config">NFC config: %s</string>
    <string name="nfc_not_supported">NFC NOT SUPPORTED</string>
    <string name="card_wait_timeout">Card wait timeout (s)</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="enter_amount_on_ucube">Enter amount on uCube</string>
    <string name="amount">Amount</string>
    <string name="cashback_amount">Cashback Amount</string>
    <string name="use_single_entry_point">Use single entry point</string>
    <string name="mag_stripe">Mag stripe</string>
    <string name="chip">Chip</string>
    <string name="nfc">NFC</string>
    <string name="force_online_pin">Force online PIN</string>
    <string name="online_pin_block_format">Online PIN block format</string>
    <string name="start_payment">Pay</string>
    <string name="_00_00">00.00</string>
    <string name="_1_00">1.00</string>
    <string name="payment_progress_with_amount">Make payment of %1$.2f %2$s</string>
    <string name="payment_progress_without_amount">Make payment in %s</string>
    <string name="payment_failed">Please Check the input parameters, Payment failed!</string>
    <string name="display">Display</string>
    <string name="contact_interface">Contact interface</string>
    <string name="nfc_interface">NFC interface</string>
    <string name="msr_interface">MSR interface</string>
    <string name="display_result_on_ucube">Display result on uCube</string>
    <string name="force_authorisation">Force Authorisation</string>
    <string name="cancel_pay">Cancel current payment</string>
    <string name="keep_secure_session">Keep secure session open</string>
    <string name="display_msg">Display message</string>
    <string name="display_msg_failure">Message display failure</string>
    <string name="display_msg_success">Message displayed successfully</string>
    <string name="set_power_off_timeout_value">Set power off timeout</string>
    <string name="set_power_off_timeout_failed"> Set power off timeout failed</string>
    <string name="set_power_off_timeout_cancelled"> Set power off timeout cancelled</string>
    <string name="set_power_off_timeout_success"> Set power off timeout success</string>
    <string name="setup_quick_mode">Setup Quick mode</string>
    <string name="setup_slow_mode">Setup Slow mode</string>
    <string name="setup_buzzer_on">Buzzer ON</string>
    <string name="setup_buzzer_off">Buzzer OFF</string>
    <string name="get_supported_locales">Get supported locales</string>
    <string name="get_supported_locale_list_failed">Get Supported locale liste failed</string>
    <string name="supported_locale_list_is_empty">Supported locale list is empty</string>
    <string name="set_locale_failed"> set locale failed</string>
    <string name="set_locale_success"> set locale success</string>
    <string name="display_qr_code">Display QR CODE</string>
    <string name="display_qr_code_failure">QR CODE display failure</string>
    <string name="display_qr_code_cancelled">QR CODE display cancelled</string>
    <string name="display_qr_code_success">QR CODE displayed successfully</string>
    <string name="enter_secure_session">Enter secure session</string>
    <string name="enter_secure_session_failure">Enter secure session failure</string>
    <string name="enter_secure_session_success">Enter secure session successfully</string>
    <string name="exit_secure_session">exit secure session</string>
    <string name="exit_secure_session_failure">exit secure session failure</string>
    <string name="exit_secure_session_success">exit secure session successfully</string>
    <string name="get_terminal_state">get terminal state</string>
    <string name="get_terminal_state_failure">get terminal state failure</string>
    <string name="get_terminal_state_success">get terminal state successfully</string>
    <string name="get_info">Get Info</string>
    <string name="get_sp_id">Get SP ID</string>
    <string name="get_info_progress">Get Info (tag %s)</string>
    <string name="get_info_failed">Get Info Failed</string>
    <string name="terminal_serial_number">Terminal SN : </string>
    <string name="part_number">Terminal PN : </string>
    <string name="automatic_power_off_time_out">Power off Timeout : </string>
    <string name="NFC_capability">NFC Capability : </string>
    <string name="NFC_Firmware_Version"> NFC Firmware Version: </string>
    <string name="NFC_Firmware_State"> NFC_Firmware_State : </string>
    <string name="EMVL1_Cell_Lib_Version"> EMVL1 Cless Lib Version: </string>
    <string name="Test_LoopBack_Version">Test LoopBack Version: </string>
    <string name="AGNOS_LIB_Version">AGNOS LIB Version : </string>
    <string name="ACE_Layer_Version">ACE Layer Version : </string>
    <string name="default_dongle_model">Use as default</string>
    <string name="enable_test">Enable test</string>
    <string name="enable_certif">Enable certification mode</string>
    <string name="GPI_Version"> GPI Version: </string>
    <string name="EMLV3_Version"> EMLV3 Version : </string>
    <string name="USB_capability">USB Capability : </string>
    <string name="OS_version">OS Version : </string>
    <string name="emv_configuration_version">ICC Config Version : </string>
    <string name="emv_cless_configuration_version">NFC Config Version : </string>
    <string name="NFC_Module_state">NFC Module State : </string>
    <string name="terminal_state">Terminal state : </string>
    <string name="battery_state">Battery Level : </string>
    <string name="SVPP_version">SVPP version : </string>
    <string name="BLE_version">BLE version : </string>
    <string name="refresh">Refresh</string>
    <string name="model">Model</string>
    <string name="mdm_register">MDM Register</string>
    <string name="mdm_config">MDM Configuration</string>
    <string name="cancel_payment">Cancel</string>
    <string name="second_symbol">(s)</string>
    <string name="_180">180</string>
    <string name="set_power_off_timeout">Set power off timeout</string>
    <string name="power_off_timeout_val">val 0 or <![CDATA[> 32 and < 255]]></string>
    <string name="get_logs_l1">Tag 0xCB</string>
    <string name="get_logs_l1_failure">Get Logs L1 failed</string>
    <string name="get_logs_l1_success">Get Logs L1 Success</string>
    <string name="force_debug">Force debug</string>
    <string name="allow_pin_bypass">PIN bypass OK</string>
    <string name="_0">0</string>
    <string name="start_cancel_after">start cancel after (ms)</string>
    <string name="ms">ms</string>
    <string name="_10">10</string>
    <string name="_200">200</string>
    <string name="_1000">1000</string>
    <string name="scan_ucube_touch_filter">Scan Filter : </string>
    <string name="utouch_filter">uTouch</string>
    <string name="resources_file_version">Resources file version</string>
    <string name="skip_card_removal">skip card removal</string>
    <string name="skip_starting_steps">skip starting steps</string>
    <string name="retrieve_f5_tag">Retrieve F5 tag</string>
    <string name="selectFile">Select file</string>
    <string name="removeFile">Remove</string>
    <string name="payment_tip">Tip</string>
    <string name="emv_param_override">EMV Param override</string>
    <string name="sdse_mode">SDSE_mode</string>
    <string name="payment_loop">Payment Loop</string>
</resources>