<?xml version="1.0" encoding="utf-8"?><!--
  ~ ============================================================================
  ~
  ~ Copyright (c) 2022 YouTransactor
  ~
  ~ All Rights Reserved.
  ~
  ~ This software is the confidential and proprietary information of YouTransactor
  ~ ("Confidential Information"). You  shall not disclose or redistribute such
  ~ Confidential Information and shall use it only in accordance with the terms of
  ~ the license agreement you entered into with YouTransactor.
  ~
  ~ This software is provided by YouTransactor AS IS, and YouTransactor
  ~ makes no representations or warranties about the suitability of the software,
  ~ either express or implied, including but not limited to the implied warranties
  ~ of merchantability, fitness for a particular purpose or non-infringement.
  ~ YouTransactor shall not be liable for any direct, indirect, incidental,
  ~ special, exemplary, or consequential damages suffered by licensee as the
  ~ result of using, modifying or distributing this software or its derivatives.
  ~
  ~ ==========================================================================
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/card_wait_timeout"
                android:labelFor="@id/cardWaitTimeoutFld" />

            <EditText
                android:id="@+id/cardWaitTimeoutFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:width="60dp"
                android:ems="10"
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <Switch
            android:id="@+id/amountSrcSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/enter_amount_on_ucube" />

        <Switch
            android:id="@+id/keepSecureSessionSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/keep_secure_session" />

        <Switch
            android:id="@+id/forceAuthorisationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/force_authorisation" />
        <Switch
            android:id="@+id/forceOnlinePINSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/force_online_pin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/online_pin_block_format"
                android:textColor="?android:attr/textColorPrimary" />

            <Spinner
                android:id="@+id/onlinePinBlockFormatChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textColor="?android:attr/textColorPrimary"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <Switch
            android:id="@+id/forceDebugSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/force_debug" />

        <Switch
            android:id="@+id/allowPinBypassSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/allow_pin_bypass" />

        <Switch
            android:id="@+id/tipSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/payment_tip" />

        <Switch
            android:id="@+id/retrieveF5Tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/retrieve_f5_tag" />

        <Switch
            android:id="@+id/skipCardRemovalSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:checked="true"
            android:text="@string/skip_card_removal" />

        <Switch
            android:id="@+id/skipStartingStepsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:checked="true"
            android:text="@string/skip_starting_steps" />

        <Switch
            android:id="@+id/paymentLoopSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/payment_loop" />

        <Switch
            android:id="@+id/emvParameterOverride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/emv_param_override" />

        <LinearLayout
            android:id="@+id/auto_sdse_mode_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/sdse_mode"
                android:textColor="?android:attr/textColorPrimary" />

            <Spinner
                android:id="@+id/sdse_mode_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textColor="?android:attr/textColorPrimary"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/pos_entry_mode"
                android:labelFor="@id/posEntryModeFld"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/posEntryModeFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:width="60dp"
                android:ems="10"
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="5"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/dukpt_key_slot"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/dukpt_slotFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:width="60dp"
                android:ems="10"
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="1"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
